fixing date input to show on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -95,6 +95,16 @@ select {
   padding: 20px;
 }
 
+input[type='date']:focus,
+input[type='datetime']:focus,
+input[type='datetime-local']:focus,
+textarea:focus,
+select:focus {
+  color: white;
+  font-size: 1.5em;
+  padding: 20px;
+}
+
 input[type="date"] {
     color: #606c76;
     font-size: 1.5em;
